@@ -35,6 +35,8 @@ const events = {
 	CONNECT_ACCOUNT_STRIPE_CONNECTED: 'wcpay_stripe_connected',
 	DEPOSITS_SUMMARY_EMPTY_STATE_CLICKED:
 		'wcpay_deposits_summary_empty_state_click',
+	MULTI_CURRENCY_ENABLED_CURRENCIES_UPDATED:
+		'wcpay_multi_currency_enabled_currencies_updated',
 };
 
 export default {
